# dweb

./: .gitignore  .woodpecker.yml  Cargo.toml  README.md
.github/workflows/: ci.yml  dweb-app-daved.yml  dweb-app.yml
dweb-app/: README.md  package-lock.json  package.json
dweb-app/src/: app.html
dweb-app/src-tauri/: Cargo.toml  tauri.conf.json
dweb-app/src-tauri/capabilities/: default.json
dweb-app/src-tauri/icons/: icon.icns
dweb-app/src-tauri/src/: lib.rs  main.rs
dweb-app/src/routes/: +page.svelte
dweb-cli/: Cargo.toml  README.md
dweb-cli/src/: cli_options.rs  commands.rs  connect.rs  experimental.rs  helpers.rs  main.rs  serve.rs  services.rs  services_quick.rs
dweb-cli/src/commands/: awe_subcommands.rs  cmd_browse.rs  cmd_heal_history.rs  cmd_inspect.rs  cmd_name.rs  helpers.rs  server.rs  server.rs_new  subcommands.rs  subcommands.rs_new
dweb-cli/src/experimental/: README.md
dweb-cli/src/experimental/api/: dweb_v0.rs  mod.rs
dweb-cli/src/experimental/app/: test.rs
dweb-cli/src/experimental/www/: debug.rs  mod.rs  test.rs  www.rs
dweb-cli/src/generated_rs/: builtins_local.rs  builtins_public.rs  mod.rs
dweb-cli/src/serve/: serve_aw.rs
dweb-cli/src/services/: helpers.rs  hosts.rs  names.rs  openapi.rs  ports.rs  rclone.rs  www.rs
dweb-cli/src/services/api/: dweb.rs  dweb_v0.rs  mod.rs  test.rs  v0.rs
dweb-cli/src/services/api/v0/: data.rs  directory.rs  name.rs
dweb-cli/src/services/api_ant/: test.rs  v0.rs
dweb-cli/src/services/api_ant/v0/: archive.rs  archive_public.rs  chunk.rs  data.rs  lib.rs  pointer.rs  scratchpad.rs
dweb-cli/src/services/api_dweb/: v0.rs
dweb-cli/src/services/api_dweb/v0/: directory.rs  file.rs  form.rs  name.rs
dweb-cli/src/services/api_dweb_ant/: v0.rs
dweb-cli/src/services/api_dweb_ant/v0/: archive.rs  data.rs  pointer.rs  scratchpad.rs
dweb-cli/src/services/app/: mod.rs  test.rs
dweb-cli/src/services/hosts/api/: dweb_v0.rs
dweb-cli/src/services/hosts/www/: debug.rs  test.rs  www.rs
dweb-cli/src/services/names/api/: dweb_v0.rs
dweb-cli/src/services/names/www/: test.rs
dweb-cli/src/services/ports/api/: dweb_v0.rs
dweb-cli/src/services/ports/www/: dweb_link.rs  mod.rs
dweb-cli/src/services/www/: debug.rs  dweb_info.rs  dweb_open.rs  dweb_version.rs  mod.rs  www.rs
dweb-cli/src/services_quick/api/: test.rs
dweb-cli/src/services_quick/www/: dweb_link.rs  www.rs
dweb-cli/src/web/: etag.rs
dweb-lib/: Cargo.toml  README.md
dweb-lib/src/: client.rs  data.rs  files.rs  history.rs  lib.rs  storage.rs  token.rs  tokens.rs  trove.rs  types.rs
dweb-lib/src/api/: mod.rs
dweb-lib/src/autonomi/: commands.rs  main.rs  mod.rs  opt.rs
dweb-lib/src/autonomi/access/: keys.rs  network.rs  user_data.rs
dweb-lib/src/autonomi/access/actions/: connect.rs  download.rs
dweb-lib/src/autonomi/actions/: connect.rs  download.rs  mod.rs
dweb-lib/src/autonomi/args/: mod.rs
dweb-lib/src/autonomi/wallet/: encryption.rs  fs.rs  mod.rs
dweb-lib/src/cache/: directory.rs  directory_version.rs  directory_with_name.rs  directory_with_port.rs  file.rs  mod.rs  spawn.rs
dweb-lib/src/files/: archive.rs  directory.rs  directory_tree.rs
dweb-lib/src/generated_rs/: mod.rs
dweb-lib/src/helpers/: convert.rs  file.rs  graph_entry.rs  mod.rs  retry.rs  web.rs
dweb-lib/src/trove/: directory_tree.rs  file_tree.rs
dweb-lib/src/web/: browse.rs  fetch.rs  mod.rs  name.rs  request.rs
dweb-server/: Cargo.toml  README.md  helpers.rs  main.rs
dweb-server/src/: demo_service.rs  lib copy.rs  lib.rs  local_server2.rs  services.rs  services_test.rs  tmp.rs
dweb-server/src/services/: openapi.rs  www.rs
dweb-server/src/services/api_dweb/v0/: app_settings.rs  form.rs  name.rs  wallet.rs
dweb-server/src/services/api_dweb_ant/: v0.rs
dweb-server/src/services/api_dweb_ant/v0/: archive.rs  chunk.rs  data.rs  scratchpad.rs
dweb-server/src/services/www/: debug.rs  dweb_info.rs  dweb_open.rs
dweb-server/src/web/: etag.rs
