[workspace]
resolver = "2"
members = ["dweb-cli" , "dweb-lib", "dweb-server"]

# Including "dweb-app/src-tauri" breaks compilation in all packages with error:
#  error[E0433]: failed to resolve: could not find `__private` in `serde`
#    --> /home/mrh/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/alloy-consensus-0.15.11/src/transaction/envelope.rs:916:34
#     |
# 916 |             let content = serde::__private::de::Content::deserialize(deserializer)?;
#     |                                  ^^^^^^^^^ could not find `__private` in `serde`

# ... so exclude it:
exclude = ["dweb-app"]

[workspace.package]
version = "0.11.1"
authors = ["happybeing <git@happybeing.com>"]
description = "Decentralised web and storage crates for Autonomi"
license = "AGPL-3.0"
repository = "https://codeberg.org/happybeing/dweb"

[workspace.dependencies]
dweb = { path = "./dweb-lib", version = "0.11.1", features = ["development"] }
dweb-server = { path = "./dweb-server", version = "0.11.1", features = ["development"] }

[workspace.lints.rust]
arithmetic_overflow = "forbid"
mutable_transmutes = "forbid"
no_mangle_const_items = "forbid"
unknown_crate_types = "forbid"
unsafe_code = "warn"
trivial_casts = "warn"
trivial_numeric_casts = "warn"
unused_extern_crates = "warn"
unused_import_braces = "warn"

[workspace.lints.clippy]
uninlined_format_args = "warn"
unicode_not_nfc = "warn"
unused_async = "warn"
unwrap_used = "warn"
clone_on_ref_ptr = "warn"

[profile.release]
debug = 0
strip = "debuginfo"

[profile.dev]
debug = true

