[package]
name = "dweb-cli"
description = "Decentralised web and storage command line app for Autonomi"
edition = "2021"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "dweb"
path = "src/main.rs"

[features]
# updated for autonomi v0.3.4
default = ["skip-network-compatibility-check"]
ametrics = ["ant-logging/process-metrics"]
development = ["fixed-dweb-hosts"]

skip-network-compatibility-check = []   # Avoid need to upload avp type and include xor address in build
fixed-dweb-hosts = []

[dependencies]
#
# Generated using: dw-dependencies --branch stable-2025.9.2.1
autonomi = { version = "0.6.1" }
ant-build-info = { version = "0.1.29" }
ant-logging = { version = "0.2.52" }
evmlib = { version = "0.4.4" }
#
# Generated using: dw-dependencies --branch stable-2025.9.1.2
#autonomi = { version = "0.6.0" }
#ant-build-info = { version = "0.1.29" }
#ant-logging = { version = "0.2.52" }
#evmlib = { version = "0.4.3" }

dweb = { workspace = true }
dweb-server = { workspace = true }

clap = "4.5.21"
color-eyre = "0.6.3"
regex = "1.11.1"
chrono = "0.4.39"
tracing = "0.1.41"
open = "5.3.2"
hex = "0.4.3"
blsttc = "8.0.2"
actix-web = "4.9.0"

# patched
#utoipa = { path = "../../utoipa-patch/utoipa", features = ["actix_extras", "non_strict_integers"] } # "5.3.1"
#utoipa-actix-web = { path = "../../utoipa-patch/utoipa-actix-web/", version = "0.1.2" }
#utoipa-swagger-ui = { path = "../../utoipa-patch/utoipa-swagger-ui", version = "9.0.1", features = ["reqwest", "actix-web"] }

#[dependencies.zip]
# Downgrade zip until utoipa fix released
#version = "=2.3.0"

[lints]
workspace = true
