[package]
name = "dweb"
description = "Decentralised web and storage library for Autonomi"
edition = "2021"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "dweb"
crate-type = ["cdylib", "rlib"]

[lints]
workspace = true

[features]
default = ["skip-network-compatibility-check"]
metrics = ["ant-logging/process-metrics"]
skip-network-compatibility-check = []   # Avoid need to upload avp type and include xor address in build
development = ["fixed-dweb-hosts"]
fixed-dweb-hosts = []

[dependencies]
# Generated using: awe-dependencies --branch rc-2025.1.1 --ant-path ../../autonomi
autonomi = { version = "0.3.6-rc.1", path = "../../autonomi/autonomi" }
ant-bootstrap = { version = "0.1.5-rc.1", path = "../../autonomi/ant-bootstrap" }
ant-build-info = { version = "0.1.24-rc.1", path = "../../autonomi/ant-build-info" }
ant-evm = { version = "0.1.9-rc.1", path = "../../autonomi/ant-evm" }
ant-logging = { version = "0.2.46-rc.1", path = "../../autonomi/ant-logging" }
ant-networking = { version = "0.3.5-rc.1", path = "../../autonomi/ant-networking" }
ant-protocol = { version = "0.3.4-rc.1", path = "../../autonomi/ant-protocol" }

# Generated using: awe-dependencies --branch main --ant-path ../../autonomi
# where main is at 8c16ea4d3
# autonomi = { version = "0.3.5", path = "../../autonomi/autonomi" }
# ant-bootstrap = { version = "0.1.4", path = "../../autonomi/ant-bootstrap" }
# ant-build-info = { version = "0.1.23", path = "../../autonomi/ant-build-info" }
# ant-evm = { version = "0.1.8", path = "../../autonomi/ant-evm" }
# ant-logging = { version = "0.2.45", path = "../../autonomi/ant-logging" }
# ant-networking = { version = "0.3.4", path = "../../autonomi/ant-networking" }
# ant-protocol = { version = "0.3.3", path = "../../autonomi/ant-protocol" }

# Generated using: awe-dependencies --branch main --ant-path ../../autonomi
# where main is at 8ba9e28d1
# autonomi = { version = "0.3.5", path = "../../autonomi/autonomi" }
# ant-bootstrap = { version = "0.1.4", path = "../../autonomi/ant-bootstrap" }
# ant-build-info = { version = "0.1.23", path = "../../autonomi/ant-build-info" }
# ant-evm = { version = "0.1.8", path = "../../autonomi/ant-evm" }
# ant-logging = { version = "0.2.45", path = "../../autonomi/ant-logging" }
# ant-networking = { version = "0.3.4", path = "../../autonomi/ant-networking" }
# ant-protocol = { version = "0.3.3", path = "../../autonomi/ant-protocol" }

## Everything else
http = "1.1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = { version = "~0.8.5", features = ["small_rng"] }
anyhow = "1.0.81"
async-stream = "0.3.5"
bytes = "1.6.0"
futures = "0.3.30"
indicatif = { version = "0.17.5", features = ["tokio"] }
log = "0.4.21"
multiaddr = "0.18.1"
tempfile = "3.10.1"
xor_name = "5.0.0"
color-eyre = "0.6.3"
dirs-next = "2.0.0"
structopt = "0.3.26"
clap = "4.5.4"
walkdir = "2.5.0"
chrono = { version = "0.4.37", features = ["serde"] }
rmp-serde = "1.1.2"
self_encryption = "0.29.1"
crdts = "7.3.2"
url = "2.5.0"
regex = "1.9.6"
ring = "0.17.8"
prettytable = "0.10.0"
const-hex = "1.13.1"
hex = "0.4.3"
rpassword = "7.3.1"
thiserror = "2.0.0"
actix-web = "4.9.0"
mime_guess = "2.0.5"
schnellru = "0.2.4"
mime = "0.3.17"
blsttc = "8.0.2"
