[package]
name = "dweb"
description = "Decentralised web and storage library for Autonomi"
edition = "2024"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "dweb"
crate-type = ["cdylib", "rlib"]

[lints]
workspace = true

[features]
default = ["skip-network-compatibility-check"]
metrics = ["ant-logging/process-metrics"]
skip-network-compatibility-check = []   # Avoid need to upload avp type and include xor address in build
development = ["fixed-dweb-hosts"]
fixed-dweb-hosts = []
#vendored = ["dep:utoipa-swagger-ui-vendored"]

[utoipa-swagger-ui.metadata.docs.rs]
features = ["actix-web", "reqwest", "vendored"]
no-default-features = true
rustdoc-args = ["--cfg", "doc_cfg"]

[build-dependencies]
#utoipa-swagger-ui-vendored = { version = "0.1.2", path = "utoipa-swagger-ui-vendored", optional = true }
utoipa-swagger-ui-vendored = "0.1.2"

[dependencies]
#
# Generated using: dw-dependencies --branch stable-2025.10.1.6
autonomi = { version = "0.6.3" }
ant-build-info = { version = "0.1.29" }
ant-logging = { version = "0.2.52" }
evmlib = { version = "0.4.5" }

## Everything else
http = "1.1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = { version = "~0.8.5", features = ["small_rng"] }
bytes = "1.6.0"
multiaddr = "0.18.1"
xor_name = "5.0.0"
color-eyre = "0.6.3"
dirs-next = "2.0.0"
clap = "4.5.4"
walkdir = "2.5.0"
chrono = { version = "0.4.37", features = ["serde"] }
rmp-serde = "1.1.2"
url = "2.5.0"
ring = "0.17.8"
prettytable = "0.10.0"
const-hex = "1.13.1"
hex = "0.4.3"
rpassword = "7.3.1"
actix-web = "4.9.0"
mime_guess = "2.0.5"
schnellru = "0.2.4"
mime = "0.3.17"
blsttc = "8.0.2"
port_check = "0.2.1"
reqwest = "0.12.12"
utoipa = { version = "5.3.1", features = ["actix_extras"] }
sha256 = "1.6.0"

# patched
#utoipa = { path = "../../utoipa-patch/utoipa", features = ["actix_extras"] } # "5.3.1"
#utoipa-actix-web = { path = "../../utoipa-patch/utoipa-actix-web/", version = "0.1.2" }
#utoipa-swagger-ui = { path = "../../utoipa-patch/utoipa-swagger-ui", version = "9.0.1", features = ["reqwest", "actix-web"] }

#[dependencies.zip]
# Downgrade zip until utoipa fix released
#version = "=2.3.0"

