[package]
name = "dweb-server"
description = "Decentralised web and storage REST API for Autonomi"
edition = "2024"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
dependencies.workspace = true

[lib]
name = "dweb_server"
crate-type = ["cdylib", "rlib"]

[lints]
workspace = true

[features]
#metrics = ["ant-logging/process-metrics"]
skip-network-compatibility-check = []   # Avoid need to upload avp type and include xor address in build
development = ["fixed-dweb-hosts"]
fixed-dweb-hosts = []

[utoipa-swagger-ui.metadata.docs.rs]
features = ["actix-web", "reqwest", "vendored"]
no-default-features = true
rustdoc-args = ["--cfg", "doc_cfg"]

[build-dependencies]
utoipa-swagger-ui-vendored = "0.1.2"

[dependencies]
#
# Generated using: dw-dependencies --branch stable-2025.11.2.1
autonomi = { version = "0.7.1" }
ant-build-info = { version = "0.1.29" }
ant-logging = { version = "0.3.0" }
evmlib = { version = "0.4.5" }

dweb = { workspace = true }

## Everything else
actix-cors = "0.7.1"
http = "1.1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3.10.1"
color-eyre = "0.6.3"
actix-web = "4.9.0"
mime = "0.3.17"
utoipa = { version = "5.3.1", features = ["actix_extras"] }
utoipa-actix-web = "0.1.2"
utoipa-swagger-ui = { version = "9.0.1", features = ["reqwest", "actix-web"] }
parking_lot = "0.12.4"
actix-multipart = "0.7.2"
qstring = "0.7.2"
